--- a/css/style.css
+++ b/css/style.css
@@ -1,343 +1,336 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
-body {
-  color: #5a5a5a;
-  font-family: "open sans", sans-serif;
-  font-weight: 300;
-}
-
-h1 .h1 {
-  text-transform: uppercase;
-}
-
-.text-title {
-  /* use google font */
-  font-family: "montserrat", sans-serif;
-  font-weight: 673;
-}
-
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Customize the navbar
--------------------------------------------------- */
-.navbar-name {
-  color: #fff;
-  font-weight: 500;
-}
-
-/* Size the navbar image on small to medium screen */
-.nav-img-top {
-  max-width: 30px;
-}
-
-/* Navbar button customization */
-.nav-btn-top,
-.nav-btn-mid,
-.nav-btn-bottom {
-  padding: 0.1rem 1rem;
-  margin: 0.15rem;
-  border-radius: 0.25rem;
-  border: none;
-  background-color: var(--bs-white);
-}
-
-/* About
--------------------------------------------------- */
-/* Anime JS */
-.about-t1-2 .letter {
-  display: inline-block;
-  line-height: 1em;
-}
-.about-t1-3 .letter {
-  display: inline-block;
-  line-height: 1em;
-}
-.about-t1-4 .letter {
-  display: inline-block;
-  line-height: 1em;
-}
-
-/* Buttons to skip sections */
-.section-buttons {
-  color: #fff;
-  margin-right: 2.5%;
-  margin-left: 2.5%;
-  max-width: 45%;
-}
-
-/* Skills
--------------------------------------------------- */
-.icon-container p {
-  font-size: 0.9rem;
-}
-
-.skills-icons-img {
-  height: 1.7rem;
-  width: 1.7rem;
-}
-
-.skillsContainer {
-  text-align: center;
-  font-size: 0.7rem;
-}
-
-.skillsGrid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(80px, 1fr));
-  grid-template-columns: repeat(auto-fill, 80px);
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  list-style-type: none;
-}
-
-.skillsGrid li {
-  background-color: var(--bs-white);
-  padding: 10px;
-  border-radius: 15px;
-  height: 78px;
-  width: 80px;
-  -webkit-transition: all 0.3s ease-in;
-  transition: all 0.3s ease-in;
-  -webkit-box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
-  box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
-  border: 1px solid var(--bs-primary);
-}
-
-.skillsGrid li p {
-  margin-top: 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 0.8rem;
-}
-
-.skillsGrid li img {
-  width: 35px;
-  height: 35px;
-}
-
-ul.skillsGrid {
-  padding-left: 0px;
-}
-
-.knowledge-subtitle {
-  font-size: 1.1rem;
-  font-weight: 400;
-}
-
-/* Experience
--------------------------------------------------- */
-.content {
-  padding-left: 24px;
-}
-
-.card {
-  border: none;
-  border-radius: 0%;
-  width: 100%;
-}
-
-/* Edit the card image */
-.card-img {
-  border-radius: 0%;
-  filter: brightness(0.8);
-  transition: all 0.3s ease-in-out;
-}
-
-.view-project-btn {
-  width: 1vmax;
-  height: 1vmax;
-  transition: all 0.2s ease-in-out;
-}
-
-.view-project-btn-animation {
-  transform: scale(10);
-}
-
-.img-animation {
-  transform: scale(1.2);
-  filter: brightness(1.2);
-}
-
-/* circle and card title aren't shown
-   they are the style of the view project btn
-*/
-.circle {
-  /* background primary color */
-  background-color: #bd5d38;
-  border-radius: 50%;
-  width: 10vmax;
-  height: 10vmax;
-}
-/* Edit the content overlaying card image */
-.card-title {
-  font-size: 20px; /* Font size fallback if vmin doesn't work */
-  font-size: 3.1vmin;
-  font-weight: 500;
+body,
+html {
   margin: 0;
-  line-height: normal;
-}
-
-/* Education
--------------------------------------------------- */
-
-/* Interests
--------------------------------------------------- */
-.interests-icons {
-  margin-right: 0.25em;
-}
-
-/* .interest p {
-  color: rgb(230, 230, 230);
-} */
-
-/* Contact
--------------------------------------------------- */
-#contact-button {
-  display: inline-block;
-  margin: 0 auto;
-  background: linear-gradient(
-    to left,
-    rgba(255, 255, 255, 0) 50%,
-    var(--bs-primary) 50%
-  );
-  background-size: 200% 100%;
-  background-position: right bottom;
-  transition: all 0.4s ease;
-}
-
-#contact-button:hover {
-  background-position: left bottom;
-  color: var(--bs-dark) !important;
-}
-
-/* Contact Form */
-#fs-frm input,
-#fs-frm select,
-#fs-frm textarea,
-#fs-frm fieldset,
-#fs-frm optgroup,
-#fs-frm label,
-#fs-frm #card-element:disabled {
-  font-family: inherit;
-  font-size: 100%;
-  color: inherit;
-  border: none;
-  border-radius: 0;
-  display: block;
-  width: 100%;
   padding: 0;
-  margin: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-#fs-frm label,
-#fs-frm legend,
-#fs-frm ::placeholder {
-  font-size: 0.825rem;
-  margin-bottom: 0.5rem;
-  padding-top: 0.2rem;
-  display: flex;
-  align-items: baseline;
+  box-sizing: border-box;
+  font-family: "Lobster", regular;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #333;
 }
 
-/* border, padding, margin, width */
-#fs-frm input,
-#fs-frm select,
-#fs-frm textarea,
-#fs-frm #card-element {
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 0.75em 1rem;
-  margin-bottom: 1.5rem;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
-#fs-frm input:focus,
-#fs-frm select:focus,
-#fs-frm textarea:focus {
-  background-color: white;
-  outline-style: solid;
-  outline-width: thin;
-  outline-color: gray;
-  outline-offset: -1px;
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
-#fs-frm [type="text"],
-#fs-frm [type="email"] {
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
   width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
-#fs-frm [type="button"],
-#fs-frm [type="submit"],
-#fs-frm [type="reset"] {
-  width: auto;
-  cursor: pointer;
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
+
+/* Typography */
+.lobster-two-regular {
+  font-family: "Lobster Two", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-#fs-frm [type="button"]:focus,
-#fs-frm [type="submit"]:focus,
-#fs-frm [type="reset"]:focus {
-  outline: none;
+
+.lobster-two-bold {
+  font-family: "Lobster Two", sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
-#fs-frm [type="submit"],
-#fs-frm [type="reset"] {
+
+.lobster-two-regular-italic {
+  font-family: "Lobster Two", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.lobster-two-bold-italic {
+  font-family: "Lobster Two", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+/* Website colors */
+.text-primary {
+  color: #f0d1e6 !important;
+}
+
+.text-secondary {
+  color: #fad8d8 !important;
+}
+
+.text-tertiary,
+.btn-tertiary {
+  color: #ff6f61 !important;
+}
+
+.text-success {
+  color: #28a745 !important;
+}
+
+.text-danger {
+  color: #dc3545 !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 15px 0;
+  font-weight: 700;
+}
+
+p {
+  margin: 0 0 15px 0;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+/* Utility Classes */
+.text-center {
+  text-align: center;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.mt-3 {
+  margin-top: 1rem;
+}
+.mt-4 {
+  margin-top: 1.5rem;
+}
+.mt-5 {
+  margin-top: 3rem;
+}
+
+.mb-0 {
   margin-bottom: 0;
 }
-#fs-frm select {
-  text-transform: none;
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mb-3 {
+  margin-bottom: 1rem;
+}
+.mb-4 {
+  margin-bottom: 1.5rem;
+}
+.mb-5 {
+  margin-bottom: 3rem;
 }
 
-#fs-frm [type="checkbox"] {
-  -webkit-appearance: checkbox;
-  -moz-appearance: checkbox;
-  appearance: checkbox;
-  display: inline-block;
-  width: auto;
-  margin: 0 0.5em 0 0 !important;
+.p-0 {
+  padding: 0;
 }
-
-#fs-frm [type="radio"] {
-  -webkit-appearance: radio;
-  -moz-appearance: radio;
-  appearance: radio;
+.p-1 {
+  padding: 0.25rem;
 }
-
-/* address, locale */
-#fs-frm fieldset.locale input[name="city"],
-#fs-frm fieldset.locale select[name="state"],
-#fs-frm fieldset.locale input[name="postal-code"] {
-  display: inline;
+.p-2 {
+  padding: 0.5rem;
 }
-#fs-frm fieldset.locale input[name="city"] {
-  width: 52%;
+.p-3 {
+  padding: 1rem;
 }
-#fs-frm fieldset.locale select[name="state"],
-#fs-frm fieldset.locale input[name="postal-code"] {
-  width: 20%;
+.p-4 {
+  padding: 1.5rem;
 }
-#fs-frm fieldset.locale input[name="city"],
-#fs-frm fieldset.locale select[name="state"] {
-  margin-right: 3%;
+.p-5 {
+  padding: 3rem;
 }
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
-@media screen and (min-width: 556px) and (max-width: 1256px) {
-  .card-title {
-    font-size: 0.2vmin;
+/* Responsive CSS */
+@media (max-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 720px;
   }
 }
 
 @media (max-width: 576px) {
-  .text-sm {
-    font-size: 0.8rem;
+  .container {
+    max-width: 540px;
   }
 }
 
-@media (max-width: 576px) {
-  .icon-container p {
-    font-size: 0.725rem;
+@media (min-width: 576px) {
+  .fs-sm-1 {
+    font-size: 1rem !important; /* Adjust the size as needed */
   }
+}
+
+@media (min-width: 768px) {
+  .fs-md-1 {
+    font-size: 1.25rem !important; /* Adjust the size as needed */
+  }
+}
+
+@media (min-width: 992px) {
+  .fs-lg-1 {
+    font-size: 1.5rem !important; /* Adjust the size as needed */
+  }
+}
+
+@media (min-width: 1200px) {
+  .fs-xl-1 {
+    font-size: 1.75rem !important; /* Adjust the size as needed */
+  }
+}
+
+/* Buttons */
+
+/* Main Page
+-------------------------------------------------- */
+/* Custom Styles for Carousel and Overlay */
+.carousel-container {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.carousel-inner {
+  height: 100%; /* Ensure carousel inner also takes full height */
+}
+.carousel-item {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  object-position: center;
+  background: no-repeat center center scroll;
+  background-size: cover;
+}
+
+.carousel-item img {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Show landscape carousel in landscape mode */
+@media (orientation: landscape) {
+  #landscapeCarousel {
+    display: block !important;
+  }
+
+  #portraitCarousel {
+    display: none !important;
+  }
+}
+
+/* Show portrait carousel in portrait mode */
+@media (orientation: portrait) {
+  #landscapeCarousel {
+    display: none !important;
+  }
+
+  #portraitCarousel {
+    display: block !important;
+  }
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+  z-index: 1;
+}
+.content-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+.heart-button {
+  background-color: #d63384; /* Customize with your tertiary color */
+  border: none;
+  border-radius: 20%;
+  padding: 15px 20px;
+  color: white;
+  font-size: 24px;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
+
+.heart-button:hover {
+  background-color: #ff6f61; /* Lighter hover state */
+}
+
+/* Change button color */
+.btn-primary {
+  background-color: #d63384; /* Customize with your tertiary color */
+  border: none;
+  border-radius: 20%;
+  padding: 15px 20px;
+  color: white;
+  display: inline-block;
+  transition: background-color 0.5s ease;
+  text-align: center;
 }
